# site-analyzer

./: .env  .gitignore  BUG_TRACK.md  README.md  docker-compose.yml
.github/workflows/: site-analyzer-pipeline.yml
backend/: .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt
backend/app/: crud.py  db.py  initial_data.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: _mappers.py  admin.py  auth.py  test.py  titiler.py  user.py
backend/app/api/routes/mappers/: map_task.py
backend/app/core/: config.py  db.py  db_init.py  security.py  storage.py
backend/app/db/: pagination.py
backend/app/gis/: __init__.py  consts.py  district_histograms.py  engine.py  engine_models.py  functions.md  functions.py  processor.py  tools.py
backend/app/task/: __init__.py  models.py  routes.py  service.py
backend/app/utils/: consts.py
backend/tests/: conftest.py
backend/tests/unit/: __init__.py  test_api_auth_extra.py  test_api_deps.py  test_api_mappers.py  test_api_routes_minimal.py  test_config.py  test_crud.py  test_db_init.py  test_engine_models.py  test_gis_engine.py  test_gis_functions.py  test_gis_processor.py  test_gis_tools.py  test_gis_tools_plots.py  test_models.py  test_pagination.py  test_security.py  test_storage.py  test_utils.py
docs/: CICD.md  database.md  mysql.sql  openapi.yaml
experiments/: clip_optimize.ipynb  district_input_histogram.ipynb  engine_test.ipynb  gistest.ipynb  main.py  map.html  pyproject.toml  requirements.txt  storage_test.ipynb
scripts/: generate-client.sh
titiler/: .gitignore  README.md  main.py  pyproject.toml
webfront/: .env  .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json
webfront/src/: App.tsx  main.tsx
webfront/src/client/: sdk.gen.ts  types.gen.ts
webfront/src/client/client/: client.ts  index.ts  types.ts
webfront/src/crud-dashboard/: CrudDashboard.tsx
webfront/src/crud-dashboard/components/: DashboardHeader.tsx  DashboardLayout.tsx  DashboardSidebar.tsx  DashboardSidebarPageItem.tsx  MapDetails.tsx  MyMaps.tsx  NewMap.tsx  PageContainer.tsx  Tasks.tsx  Users.tsx  Welcome.tsx  statusUtils.ts  tableFormatters.ts
webfront/src/crud-dashboard/map-details/: MapTab.tsx  ProgressTab.tsx
webfront/src/jslibs/: leaflet.groupedlayercontrol.d.ts
webfront/src/marketing-page/: SiteAnalyzerHomePage.tsx
webfront/src/marketing-page/components/: AppAppBar.tsx  Features.tsx  Hero.tsx  SiteAnalyzerAppBar.tsx  SiteAnalyzerFAQ.tsx  SiteAnalyzerFeatures.tsx  SiteAnalyzerFooter.tsx  SiteAnalyzerHero.tsx  (+1 more)
webfront/src/sign-in/: SignIn.tsx
webfront/src/sign-up/: SignUp.tsx
webfront/src/utils/: ReadOnlyMode.tsx  ShowDemo.tsx  auth.ts
(+28 files in other folders)
