[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "boto3>=1.40.18",
    "fastapi[standard]>=0.116.1",
    "geopandas>=1.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "sqlmodel>=0.0.24",
]
