[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "matplotlib-inline>=0.1.7",
    "pydantic>=2.11.7",
    "rasterio>=1.4.3",
    "scipy>=1.16.1",
]
